Adds aggregate quantity to product
