# src/StoneAssemblies.OdooBot/Entities/Product.cs
@@ -23,9 +23,12 @@ public class Product
 
     public double IncomingQuantity { get; set; }
 
+    public double AggregateQuantity { get; set; }
+
     public string QuantityUnit { get; set; }
 
     public double StandardPrice { get; set; }
+
 
     public double Price { get; set; }
 }
